[metadata]
name = networking-infoblox
summary = Contains Neutron drivers for integration with Infoblox grids for IPAM and DNS.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/networking-infoblox/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_infoblox
data_files =
    etc/init.d = etc/init.d/infoblox-ipam-agent

[entry_points]
neutron.db.alembic_migrations =
    networking-infoblox = networking_infoblox.neutron.db.migration:alembic_migrations
neutron.ipam_drivers =
    infoblox = networking_infoblox.ipam.driver:InfobloxPool
console_scripts =
    infoblox-ipam-agent = networking_infoblox.neutron.cmd.eventlet.infoblox_ipam_agent:main
    create_ea_defs = networking_infoblox.tools.create_ea_defs:main
    infoblox_grid_sync = networking_infoblox.tools.infoblox_grid_sync:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_infoblox/locale
domain = networking-infoblox

[update_catalog]
domain = networking-infoblox
output_dir = networking_infoblox/locale
input_file = networking_infoblox/locale/networking-infoblox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_infoblox/locale/networking-infoblox.pot
